init: port core from reearth beta

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "Apache-2.0",
   "description": "A library that abstracts a map engine as one common API.",
   "type": "module",
-  "main": "dist/core.js",
-  "module": "dist/core.umd.mjs",
+  "main": "dist/core.umd.cjs",
+  "module": "dist/core.js",
   "types": "dist/index.d.ts",
   "files": [
     "src",
@@ -36,9 +36,8 @@
     "@turf/turf": "6.5.0",
     "@ungap/event-target": "0.2.4",
     "@xstate/react": "3.2.1",
-    "cesium": "1.116.0",
     "cesium-dnd": "1.1.0",
-    "csv-parse": "5.5.5",
+    "csv-parse": "5.5.2",
     "d3": "7.9.0",
     "fast-xml-parser": "4.3.2",
     "framer-motion": "11.0.27",
@@ -54,7 +53,7 @@
     "protomaps": "1.23.1",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
-    "react-error-boundary": "4.0.13",
+    "react-error-boundary": "4.0.11",
     "react-nl2br": "1.0.4",
     "react-use": "17.5.0",
     "resium": "1.17.3",
@@ -85,12 +84,13 @@
     "@types/lodash-es": "4.17.12",
     "@types/node": "20.12.7",
     "@types/pbf": "3.0.5",
-    "@types/react": "18.2.66",
-    "@types/react-dom": "18.2.22",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.6",
     "@types/uuid": "9.0.8",
     "@typescript-eslint/eslint-plugin": "7.2.0",
     "@typescript-eslint/parser": "7.2.0",
     "@vitejs/plugin-react": "4.2.1",
+    "cesium": "1.116.0",
     "eslint": "8.57.0",
     "eslint-config-reearth": "0.3.0",
     "eslint-plugin-react-hooks": "4.6.0",
