update version and script

--- a/example/package.json
+++ b/example/package.json
@@ -1,13 +1,14 @@
 {
   "name": "example",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "linkcore": "yarn link @reearth/core"
   },
   "dependencies": {
     "cesium": "1.116.0",
