chore: add cesium to peerDependencies and update vite config

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "cesium": "1.x"
   },
   "dependencies": {
     "@reearth/cesium-mvt-imagery-provider": "1.5.4",
