--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@seznam/compose-react-refs": "1.0.6",
     "@turf/invariant": "6.5.0",
     "@turf/turf": "6.5.0",
+    "@types/proj4": "2.5.5",
     "@ungap/event-target": "0.2.4",
     "@xstate/react": "3.2.1",
     "cesium-dnd": "1.1.0",
@@ -50,6 +51,7 @@
     "lodash-es": "4.17.21",
     "lru-cache": "8.0.4",
     "pbf": "3.2.1",
+    "proj4": "2.11.0",
     "protomaps": "1.23.1",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
