--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dist"
   ],
   "scripts": {
-    "dev": "vite",
+    "dev": "vite -c vite.config.example.ts",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
     "preview": "vite preview",
@@ -108,6 +108,7 @@
     "vite-plugin-cesium": "1.2.22",
     "vite-plugin-dts": "3.8.1",
     "vite-plugin-svgr": "4.2.0",
+    "vite-tsconfig-paths": "^4.3.2",
     "vitest": "1.0.4",
     "web-streams-polyfill": "3.2.1"
   },
