--- a/.github/workflows/npm_release.yml
+++ b/.github/workflows/npm_release.yml
@@ -7,6 +7,10 @@ on:
         version-args:
             required: true
             type: string
+    secrets:
+      npm-token:
+        required: true
+
 jobs:
   versioning:
     runs-on: ubuntu-latest
@@ -40,6 +44,6 @@ jobs:
           node-version: lts/*
       - uses: JS-DevTools/npm-publish@v3
         with:
-          token: ${{ secrets.NPM_TOKEN }}
+          token: ${{ secrets.npm-token }}
           tag: ${{ inputs.tag }}
           dry-run: true
