--- a/.github/workflows/release_beta.yml
+++ b/.github/workflows/release_beta.yml
@@ -8,3 +8,5 @@ jobs:
     with:
         tag: beta
         version-args: --preid beta prerelease
+    secrets:
+      npm-token: ${{ secrets.NPM_TOKEN }}
