--- a/.github/workflows/npm_release.yml
+++ b/.github/workflows/npm_release.yml
@@ -1,6 +1,9 @@
 on:
   workflow_call:
     inputs:
+        branch:
+          required: true
+          type: string
         tag:
           required: true
           type: string
@@ -34,9 +37,13 @@ jobs:
       - name: Run npm version
         run: npm version --no-git-tag-version ${{ inputs.version-args }}
 
+      - name: Git push
+        run: |
+          git push origin ${{ inputs.branch }}
+          git push origin ${{ inputs.branch }} --tags
+
       - name: Release to NPM
         uses: JS-DevTools/npm-publish@v3
         with:
           token: ${{ secrets.NPM_TOKEN }}
           tag: ${{ inputs.tag }}
-          dry-run: true
