use action user

--- a/.github/workflows/npm_release.yml
+++ b/.github/workflows/npm_release.yml
@@ -34,6 +34,12 @@ jobs:
       - name: Run install
         run: yarn install --frozen-lockfile
 
+      # Ref: https://github.com/actions/checkout/blob/main/README.md#push-a-commit-using-the-built-in-token
+      - name: Set up github actions user
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
       - name: Run npm version
         run: npm version ${{ inputs.version-args }}
 
