--- a/.github/workflows/release_alpha.yml
+++ b/.github/workflows/release_alpha.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   release:
-    uses: reearth/core/.github/workflows/npm_release.yml@feat/release-flow
+    uses: reearth/core/.github/workflows/npm_release.yml@main
     with:
         branch: alpha
         tag: alpha
