chore: fix workflow dispatch branch

--- a/.github/workflows/release_beta.yml
+++ b/.github/workflows/release_beta.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   release:
-    uses: reearth/core/.github/workflows/npm_release.yml@main
+    uses: reearth/core/.github/workflows/npm_release.yml@beta
     with:
         branch: beta
         tag: beta
