chore: fix permissions

--- a/.github/workflows/npm_release.yml
+++ b/.github/workflows/npm_release.yml
@@ -13,7 +13,8 @@ on:
     secrets:
       NPM_TOKEN:
         required: true
-
+permissions:
+  contents: write
 jobs:
   release:
     runs-on: ubuntu-latest
