--- a/.github/workflows/release_beta.yml
+++ b/.github/workflows/release_beta.yml
@@ -11,3 +11,4 @@ jobs:
         version-args: --preid beta prerelease
     secrets:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      PAT: ${{ secrets.PAT }}
