--- a/.github/workflows/release_latest.yml
+++ b/.github/workflows/release_latest.yml
@@ -18,3 +18,4 @@ jobs:
         version-args: ${{ inputs.version-type }}
     secrets:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      PAT: ${{ secrets.PAT }}
