--- a/.github/workflows/npm_release.yml
+++ b/.github/workflows/npm_release.yml
@@ -11,8 +11,6 @@ on:
             required: true
             type: string
     secrets:
-      PAT:
-        required: true
       NPM_TOKEN:
         required: true
 permissions:
@@ -22,6 +20,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.PAT }}
       - uses: actions/setup-node@v3
         with:
           node-version: lts/*
@@ -39,25 +39,16 @@ jobs:
 
       - name: Set up github actions user
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "keiya01"
+          git config --global user.email "34934510+keiya01@users.noreply.github.com"
 
       - name: Run npm version
         run: npm version ${{ inputs.version-args }}
 
-      - name: Push tag
-        run: git push --tags
-
-      - name: Get new version
-        id: npm
-        run: echo "version=$(cat package.json| jq -r '.version')" >> "$GITHUB_OUTPUT"
-
-      - name: Create pull request to bump version
-        uses: peter-evans/create-pull-request@v6
-        with:
-          token: ${{ secrets.PAT }}
-          branch: bump/version-${{ inputs.tag }}
-          title: "chore: bump version to ${{ steps.npm.outputs.version }}"
+      - name: Git push
+        run: |
+          git push origin ${{ inputs.branch }}
+          git push --tags
 
       - name: Release to NPM
         uses: JS-DevTools/npm-publish@v3
