--- a/.github/workflows/npm_release.yml
+++ b/.github/workflows/npm_release.yml
@@ -11,6 +11,8 @@ on:
             required: true
             type: string
     secrets:
+      PAT:
+        required: true
       NPM_TOKEN:
         required: true
 permissions:
