--- a/.github/workflows/release_latest.yml
+++ b/.github/workflows/release_latest.yml
@@ -11,10 +11,11 @@ on:
 
 jobs:
   release:
-    uses: reearth/core/.github/workflows/npm_release.yml@main
+    uses: reearth/core/.github/workflows/npm_release.yml@beta
     with:
         branch: main
         tag: latest
         version-args: ${{ inputs.version-type }}
     secrets:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      PAT: ${{ secrets.PAT }}
