--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@reearth/core",
-  "version": "0.0.5-beta.0",
+  "version": "0.0.6",
   "author": "Re:Earth contributors <community@reearth.io>",
   "license": "Apache-2.0",
   "description": "A library that abstracts a map engine as one common API.",
@@ -61,7 +61,7 @@
     "react-error-boundary": "4.0.11",
     "react-nl2br": "1.0.4",
     "react-use": "17.5.0",
-    "resium": "1.17.3",
+    "resium": "1.17.4",
     "suspend-react": "0.1.3",
     "tiny-invariant": "1.3.3",
     "use-callback-ref": "1.3.2",
