--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "node": ">=20"
   },
   "peerDependencies": {
+    "cesium": "1.x",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "cesium": "1.x"
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
     "@reearth/cesium-mvt-imagery-provider": "1.5.4",
@@ -61,7 +61,7 @@
     "react-error-boundary": "4.0.11",
     "react-nl2br": "1.0.4",
     "react-use": "17.5.0",
-    "resium": "1.17.4",
+    "resium": "^1.18.0",
     "suspend-react": "0.1.3",
     "tiny-invariant": "1.3.3",
     "use-callback-ref": "1.3.2",
