--- a/package.json
+++ b/package.json
@@ -32,6 +32,13 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "1.1.1",
+    "@radix-ui/react-select": "2.1.1",
+    "@radix-ui/react-separator": "1.1.0",
+    "@radix-ui/react-switch": "1.1.0",
+    "@radix-ui/react-dialog": "1.1.1",
+    "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-slot": "1.1.0",
     "@reearth/cesium-mvt-imagery-provider": "1.5.4",
     "@rot1024/use-transition": "1.0.0",
     "@seznam/compose-react-refs": "1.0.6",
@@ -63,6 +70,9 @@
     "react-use": "17.5.0",
     "resium": "1.18.1",
     "suspend-react": "0.1.3",
+    "tailwind-merge": "2.5.2",
+    "tailwindcss": "3.4.10",
+    "tailwindcss-animate": "1.0.7",
     "tiny-invariant": "1.3.3",
     "use-callback-ref": "1.3.2",
     "use-custom-compare": "1.4.0",
@@ -91,17 +101,22 @@
     "@types/pbf": "3.0.5",
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.0",
+    "@types/scheduler": "0.23.0",
     "@types/uuid": "9.0.8",
     "@typescript-eslint/eslint-plugin": "7.2.0",
     "@typescript-eslint/parser": "7.2.0",
     "@vitejs/plugin-react": "4.2.1",
+    "autoprefixer": "10.4.20",
     "cesium": "1.118.0",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.1",
     "eslint": "8.57.0",
     "eslint-config-reearth": "0.3.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.6",
     "eslint-plugin-storybook": "0.8.0",
     "jsdom": "22.1.0",
+    "postcss": "8.4.41",
     "prettier": "3.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
