--- a/components.json
+++ b/components.json
@@ -8,7 +8,7 @@
     "css": "example/global.css",
     "baseColor": "slate",
     "cssVariables": true,
-    "prefix": "tw-"
+    "prefix": ""
   },
   "aliases": {
     "components": "@/components",
