--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "storybook": "storybook dev -p 6007",
     "build-storybook": "storybook build",
     "preversion": "yarn test run",
-    "version": "yarn build"
+    "version": "yarn build",
+    "sketch-typegen": "xstate typegen src/**/sketchMachine.ts"
   },
   "engines": {
     "node": ">=20"
@@ -33,12 +34,13 @@
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "1.1.1",
-    "@radix-ui/react-select": "2.1.1",
-    "@radix-ui/react-separator": "1.1.0",
-    "@radix-ui/react-switch": "1.1.0",
     "@radix-ui/react-dialog": "1.1.1",
     "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-select": "2.1.1",
+    "@radix-ui/react-separator": "1.1.0",
     "@radix-ui/react-slot": "1.1.0",
+    "@radix-ui/react-switch": "1.1.0",
+    "@radix-ui/react-toggle": "1.1.0",
     "@reearth/cesium-mvt-imagery-provider": "1.5.4",
     "@rot1024/use-transition": "1.0.0",
     "@seznam/compose-react-refs": "1.0.6",
@@ -106,6 +108,7 @@
     "@typescript-eslint/eslint-plugin": "7.2.0",
     "@typescript-eslint/parser": "7.2.0",
     "@vitejs/plugin-react": "4.2.1",
+    "@xstate/cli": "0.5.17",
     "autoprefixer": "10.4.20",
     "cesium": "1.118.0",
     "class-variance-authority": "0.7.0",
