--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "clsx": "2.1.1",
     "eslint": "8.57.0",
     "eslint-config-reearth": "0.3.0",
+    "eslint-plugin-import": "2.31.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.6",
     "eslint-plugin-storybook": "0.8.0",
